tests/ui/where-clauses/where-clauses-unsatisfied.next.stderr
error[E0277]: the trait bound `Struct: Eq` is not satisfied
  --> $DIR/where-clauses-unsatisfied.rs:15:10
   |
LL |     drop(equal(&Struct, &Struct))
   |          ^^^^^ the trait `Eq` is not implemented for `Struct`
   |
note: required by a bound in `equal`
  --> $DIR/where-clauses-unsatisfied.rs:7:8
   |
LL | fn equal<T>(a: &T, b: &T) -> bool
   |    ----- required by a bound in this function
LL | where
LL |     T: Eq,
   |        ^^ required by this bound in `equal`
help: consider annotating `Struct` with `#[derive(Eq)]`
   |
LL + #[derive(Eq)]
LL | struct Struct;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
